--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "ToDO List",
   "main": "app.js",
   "scripts": {
-    "watch": "nodemon ./app.js",
+    "nodemon": "nodemon ./app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Erick Munoz",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1"
   },
   "devDependencies": {
